<resources>
    <string name="app_name">BMI</string>
    <string name="mass_kg">Mass[kg]</string>
    <string name="count">Count</string>
    <string name="appimage">appImage</string>
    <string name="height_cm">Height[cm]</string>
    <string name="provide_your_mass">Provide your mass</string>
    <string name="provide_your_height">Provide your height</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="detail_bmi_activity_label">BMI Detail</string>
    <string name="lb_label">Mass[lb]</string>
    <string name="in_label">Height[in]</string>
    <string name="your_bmi_detail">Your BMI Detail:</string>
    <string name="about_activity_label">About</string>
    <string name="imperial_units">Imperial Units</string>
    <string name="about">About</string>
    <string name="underweight">UNDERWEIGHT</string>
    <string name="healthy">HEALTHY</string>
    <string name="overweight">OVERWEIGHT</string>
    <string name="obesity">OBESITY</string>
    <string name="severe_obesity">SEVERE OBESITY</string>
    <string name="valid_parameters_request">Provide valid parameters!</string>
    <string name="author">AUTHOR:</string>
    <string name="author_name_surname">Some retarted child</string>
    <string name="user_addressing">Sorry for inconvenience of having to use this app :(</string>
    <string name="history_activity_label">BMI History</string>
    <string name="history_array_key">HISTORY_ARRAY</string>
    <string name="bmi_list_item_bmi_detail">BMI Detail</string>
    <string name="bmi_list_item_date">Date</string>
    <string name="bmi_list_item_mass_label">mass:</string>
    <string name="bmi_list_item_height_label">height:</string>
</resources>
