<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBackground"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/bmi_about_act_margin_side"
        android:layout_marginTop="@dimen/bmi_about_act_margin_top"
        android:layout_marginEnd="@dimen/bmi_about_act_margin_side"
        android:layout_marginBottom="@dimen/bmi_about_act_margin_bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/about_image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/bmi_about_act_margin_side"
            android:layout_marginTop="@dimen/bmi_about_act_margin_top"
            android:layout_marginEnd="@dimen/bmi_about_act_margin_side"
            android:layout_weight="1"
            app:srcCompat="@drawable/bmi_icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/bmi_about_act_margin_side"
            android:layout_marginTop="@dimen/bmi_about_act_margin_top"
            android:layout_marginEnd="@dimen/bmi_about_act_margin_side"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/author"
            android:textSize="@dimen/bmi_about_act_auth_label_text_size" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/bmi_about_act_margin_side"
            android:layout_marginTop="@dimen/bmi_about_act_margin_top"
            android:layout_marginEnd="@dimen/bmi_about_act_margin_side"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/author_name_surname"
            android:textSize="@dimen/bmi_about_act_auth_name_text_size" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/bmi_about_act_margin_side"
            android:layout_marginTop="@dimen/bmi_about_act_margin_top"
            android:layout_marginEnd="@dimen/bmi_about_act_margin_side"
            android:layout_marginBottom="@dimen/bmi_about_act_margin_bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_addressing"
            android:textSize="@dimen/bmi_about_act_auth_name_text_size" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>