<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBackground"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/bmiRangeView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/bmi_main_act_margin_side"
            android:layout_marginTop="@dimen/bmi_main_act_margin_top"
            android:layout_marginEnd="@dimen/bmi_main_act_margin_side"
            android:contentDescription="@string/appimage"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/bmi_ranges" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <TextView
            android:id="@+id/massLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_main_act_margin_side"
            android:layout_marginTop="@dimen/bmi_main_act_margin_top"
            android:layout_marginEnd="@dimen/bmi_main_act_margin_side"
            android:layout_marginBottom="@dimen/bmi_main_act_margin_bottom"
            android:text="@string/mass_kg"
            app:layout_constraintBottom_toTopOf="@+id/massET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <EditText
            android:id="@+id/massET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_main_act_margin_side"
            android:layout_marginTop="@dimen/bmi_main_act_mass_edit_vertical_margin"
            android:layout_marginEnd="@dimen/bmi_main_act_margin_side"
            android:layout_marginBottom="@dimen/bmi_main_act_mass_edit_vertical_margin"
            android:ems="10"
            android:hint="@string/provide_your_mass"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.75" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/heightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_main_act_margin_side"
            android:layout_marginTop="@dimen/bmi_main_act_margin_top"
            android:layout_marginEnd="@dimen/bmi_main_act_margin_side"
            android:layout_marginBottom="@dimen/bmi_main_act_margin_bottom"
            android:text="@string/height_cm"
            app:layout_constraintBottom_toTopOf="@+id/heightET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <EditText
            android:id="@+id/heightET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_main_act_margin_side"
            android:layout_marginTop="@dimen/bmi_main_act_height_edit_margin_top"
            android:layout_marginEnd="@dimen/bmi_main_act_margin_side"
            android:layout_marginBottom="@dimen/bmi_main_act_margin_bottom"
            android:ems="10"
            android:hint="@string/provide_your_height"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/results_segment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/bmi_universal_constr_lay_margin"
            android:layout_marginTop="@dimen/bmi_universal_constr_lay_margin"
            android:layout_marginEnd="@dimen/bmi_universal_constr_lay_margin"
            android:layout_marginBottom="@dimen/bmi_universal_constr_lay_margin"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline3"
            app:layout_constraintVertical_bias="0.462">

            <TextView
                android:id="@+id/resultTV"
                android:layout_width="0dp"
                android:layout_height="@dimen/bmi_main_act_result_sect_elem_height"
                android:layout_marginStart="@dimen/bmi_main_act_margin_side"
                android:layout_marginTop="@dimen/bmi_main_act_margin_top"
                android:layout_marginEnd="@dimen/bmi_main_act_margin_side"
                android:textAlignment="center"
                android:textSize="@dimen/bmi_main_act_result_text_size"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bmiLabel" />

            <TextView
                android:id="@+id/categoryTV"
                android:layout_width="0dp"
                android:layout_height="@dimen/bmi_main_act_result_sect_elem_height"
                android:layout_marginStart="@dimen/bmi_main_act_margin_side"
                android:layout_marginTop="@dimen/bmi_main_act_margin_top"
                android:layout_marginEnd="@dimen/bmi_main_act_margin_side"
                android:layout_marginBottom="@dimen/bmi_main_act_margin_bottom"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="@dimen/bmi_main_act_category_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resultTV" />

            <TextView
                android:id="@+id/bmiLabel"
                android:layout_width="@dimen/bmi_main_act_bmi_label_width"
                android:layout_height="@dimen/bmi_main_act_bmi_label_height"
                android:layout_marginStart="@dimen/bmi_main_act_margin_side"
                android:layout_marginTop="@dimen/bmi_main_act_margin_top"
                android:layout_marginEnd="@dimen/bmi_main_act_margin_side"
                android:text="@string/your_bmi"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="@dimen/bmi_main_act_info_button_size"
                android:layout_height="@dimen/bmi_main_act_info_button_size"
                android:layout_marginTop="@dimen/bmi_main_act_margin_top"
                android:layout_marginEnd="@dimen/bmi_main_act_margin_side"
                android:layout_marginBottom="@dimen/bmi_main_act_margin_bottom"
                android:background="@android:color/transparent"
                android:onClick="goToInfoActivity"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <Button
            android:id="@+id/countButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_main_act_margin_side"
            android:layout_marginTop="@dimen/bmi_main_act_margin_top"
            android:layout_marginEnd="@dimen/bmi_main_act_margin_side"
            android:layout_marginBottom="@dimen/bmi_main_act_margin_bottom"
            android:background="@color/myPrimary"
            android:onClick="onCountClicked"
            android:text="@string/count"
            android:textColor="@color/shadedWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
